k8s-config/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acend-website
  annotations:
    keel.sh/match-tag: "true"
    keel.sh/policy: force
  labels:
    app: acend-website
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: acend-website
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: acend-website
    spec:
      containers:
      - name: acend-website
        image: acend/website-hugo:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        resources:
          requests:
            cpu: 20m
            memory: 50M
          limits:
            cpu: 200m
            memory: 200M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
