k8s-config/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: acend-website
  labels:
    app: acend-website
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: acend-website
  sessionAffinity: None
  type: ClusterIP
