k8s-config/base/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acend-website
  annotations:
    kubernetes.io/ingress.class: nginx-public
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: acend-letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: script-src 'self' https://*.acend.ch";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Referrer-Policy: no-referrer-when-downgrade";
  labels:
    app: acend-website
spec:
  rules:
  - host: acend.ch
    http:
      paths:
      - backend:
          serviceName: acend-website
          servicePort: 8080
  tls:
  - hosts:
    - acend.ch
    secretName: acend-ch
